examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/different_branches_reconstruct.st
language core;

extend with #type-reconstruction;

fn main(n : Nat) -> auto {
    return if true then false else n
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
